# session-siphon

./: .env.example  .gitignore  Dockerfile.processor  README.md  collector.spec  config.docker.yaml  config.yaml.example  docker-compose.yml  pyproject.toml  start-all.sh
.github/workflows/: release.yml
.mcf/: goals.md  overview.md  plan.yaml
docs/: DESIGN.md  GIT_REPO_FILTER_ANALYSIS.md  PHASE1_PLAN.md
scripts/: backfill_git_repos.py  connect-to-remote.sh  dev-session.conf  setup-typesense.sh  sync-to-server.sh  update_schema.py  verify_git_repos.py
src/session_siphon/: __init__.py  config.py  logging.py  models.py
src/session_siphon/collector/: __init__.py  __main__.py  copier.py  daemon.py  sources.py  state.py
src/session_siphon/processor/: __init__.py  __main__.py  archiver.py  daemon.py  git_utils.py  indexer.py  state.py
src/session_siphon/search/: __init__.py  __main__.py
tests/: __init__.py  test_collector_copier.py  test_collector_daemon.py  test_collector_sources.py  test_collector_state.py  test_integration_e2e.py  test_processor_archiver.py  test_processor_daemon.py  test_processor_indexer.py  test_processor_parsers_antigravity.py  test_processor_parsers_base.py  test_processor_parsers_claude_code.py  test_processor_parsers_codex.py  test_processor_parsers_gemini.py  test_processor_parsers_opencode.py  test_processor_parsers_vscode.py  test_processor_state.py
ui/: Dockerfile  package-lock.json
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: MessageBubble.tsx  SearchableSelect.tsx
ui/src/lib/: api.ts  types.ts  typesense.ts
(+12 files in other folders)
